<resources>
    <string name="app_name">GSD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="txtSearch">Search</string>
    <string name="employee_doc">Employee Doc</string>
    <string name="employee_document">Employee Document</string>
    <string name="employee_search">Employee\nsearch</string>
    <string name="employeeSearch">Employee search</string>
    <string name="events_and_plans">Events &amp; Plans</string>
    <string name="incident_management">Incident Management</string>
    <string name="organizations">Organizations</string>
    <string name="suborganizations">Sub Organizations</string>
    <string name="vacancies">Vacancies</string>
    <string name="logo">logo</string>
    <string name="all_companies">All companies</string>
    <string name="txt_Org">Organization</string>
    <string name="txt_salary">Total Salary:</string>
    <string name="txt_main_menu">Main Menu</string>
    <string name="txt_vacancies">Vacancies</string>
    <string name="txt_employee_search">Employee Search</string>
    <string name="txt_employee_doc">Employee Documents</string>
    <string name="txt_logout_success">Successfully Logged out</string>
    <string name="menu_txt_title">Please select a company</string>
    <string name="txt_emmar">Emmar</string>
    <string name="ahd" translatable="false">AHD</string>
    <string name="txt_armani">Armani</string>
    <string name="txt_company">Company</string>
    <string name="txt_cancel">cancel</string>
    <string name="txt_selected">"Updating list"</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_logout_msg">Are you sure you want to Logout?</string>
    <string name="txt_cancle_large">CANCEL</string>
    <string name="txt_yes">YES</string>
    <string name="bundle_employee_doc">employee_doc_DTO_Obj</string>
    <string name="txt_doc_path">Doc Path:</string>
    <string name="txt_doc_path_new">Document not available at the moment</string>
    <string name="txt_close">CLOSE</string>
    <string name="error_404_msg">Service is not Available please try again Later!</string>
    <string name="error_poor_con">Poor or no Internet Connection!</string>
    <string name="error_con_timeout">Connection Timeout!</string>
    <string name="bundle_employee_profile">employee_DTO_Obj</string>
    <string name="txt_emp_profile">Employee Profile</string>
    <string name="txt_select_gender">Select Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_local_only">localonly</string>
    <string name="txt_incident_detail">Incident Detail</string>
    <string name="txt_login">Login</string>
    <string name="msg_login_failed">Login Failed. Please try again</string>
    <string name="txt_enter_username">Please enter username</string>
    <string name="txt_enter_pass">Please enter password</string>
    <string name="txt_local">local</string>
    <string name="txt_india">india</string>
    <string name="txt_pak">pakistan</string>
    <string name="txt_select_nationality">Select Nationality</string>
    <string name="txt_pakistan">Pakistan</string>
    <string name="txt_ind">India</string>
    <string name="txt_UAE">UAE</string>
    <string name="txt_thirty">30</string>
    <string name="txt_twenty">20</string>
    <string name="txt_fifty">50</string>
    <string name="txt_vac_detail">Vacancy Detail</string>
    <string name="bundle_vac_dto">vacancies_DTO_Obj</string>
    <string name="txt_salary_range">10,000- 15,000</string>
    <string name="bundle_emp_doc">employee_doc_DTO_Obj</string>
    <string name="bundle_emp_dto">employee_DTO_Obj</string>
    <string name="bundle_vacDto">vacancies_DTO_Obj</string>
    <string name="txt_loginn">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_username">Username</string>
    <string name="copyright_2016_gsd_all_rights_reserved">Copyright ©2016 GSD. All Rights Reserved</string>
    <string name="no_employee_s_found">No Employee(s) Found</string>
    <string name="no_vacancies_s_found">No Vacancies(s) Found</string>
    <string name="logged_in_username">Logged in Username</string>
    <string name="contact">Contact:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="nationality">Nationality:</string>
    <string name="organization">Organization:</string>
    <string name="salary">Salary:</string>
    <string name="job_type">Job Type:</string>
    <string name="level">Level:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="arabic">العربية</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Main Menu</item>
        <item>Organizations</item>
        <item>Vacancies</item>
        <item>Employee&#160;Search</item>
        <item>Employee&#160;Documents</item>
        <!--        <item>Incident&#160;Management</item>
        <item>Event&#160;&amp;&#160;Security&#160;Plan</item>-->
        <item>Logout</item>
    </string-array>

    <string-array name="icons">
        <item>@drawable/menu</item>
        <item>@drawable/icon_orgs</item>
        <item>@drawable/vancancy</item>
        <item>@drawable/icon_search</item>
        <item>@drawable/documents</item>
        <!--        <item>@drawable/incidentmonitoring</item>
        <item>@drawable/eventplan</item>-->
        <item>@drawable/icon_logout</item>
    </string-array>
</resources>
