<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.uaeemployee.Fragments.DashboardFragment">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo_largee"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_above="@+id/llSecond"
        android:id="@+id/llFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOrg"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/icon_orgs"
            android:layout_marginRight="3dp"
            android:layout_width="0dp"
            android:textSize="12sp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:background="@color/white"
            android:text="@string/organizations"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />

        <Button
            android:drawableTop="@drawable/vancancyy"
            android:id="@+id/btnVacancies"
            android:paddingTop="25dp"
            android:layout_marginRight="3dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_height="130dp"
            android:background="@color/white"
            android:text="@string/vacancies"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btnEmployeeSearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:layout_marginTop="-8dp"
            android:paddingTop="25dp"
            android:drawableTop="@drawable/icon_search"
            android:layout_height="130dp"
            android:background="@color/white"
            android:text="@string/employee_search"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSecond"

        android:layout_marginTop="3dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEmployeeDocs"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/documents"
            android:paddingTop="25dp"
            android:layout_height="130dp"
            android:layout_marginRight="3dp"
            android:textSize="12sp"
            android:background="@color/white"
            android:text="@string/employee_doc"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btnEventsPlans"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="130dp"
            android:paddingTop="25dp"
            android:textSize="12sp"
            android:drawableTop="@drawable/eventplan"
            android:background="@color/white"
            android:layout_marginRight="3dp"
            android:text="@string/events_and_plans"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btnIncidentManagement"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="-8dp"
            android:drawableTop="@drawable/incidentmonitoring"
            android:layout_height="130dp"
            android:paddingTop="25dp"
            android:textSize="12sp"
            android:background="@color/white"
            android:text="Incident management"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />


    </LinearLayout>
</RelativeLayout>
