<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vacancy_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.uaeemployee.Activites.VacancyDetailActivity">



    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/container_toolbar"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlImage"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="1px"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:id="@+id/tvJobTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="Dot Net Developer"
                    android:textColor="@color/white"
                    android:textSize="28dp"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/emptytext01"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" />

                <TextView
                    android:id="@+id/tvSalary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/salary"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSalaryValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="10,000-15,000"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/emptytext11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/emptytext011"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" />

                <TextView
                    android:id="@+id/tvJobType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/job_type"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvJobTypeValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="Full time"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/emptytext133"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/emptytext0111"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" />

                <TextView
                    android:id="@+id/tvLevel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/level"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLevelValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="Senior"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/emptytext1333"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/emptytext0311"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLocationValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="Demo Location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/emptytext1343"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|top"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/emptytext0211"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7" />

                <TextView
                    android:id="@+id/tvJobDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvJobDescriptionValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.7"
                    android:text="Need a guy whose has experience in this technology."
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/emptytext3133"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".1" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ivLetter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp" />
</RelativeLayout>
