<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_gender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.uaeemployee.Activites.GenderActivity">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>


    <RelativeLayout
        android:layout_marginTop="1px"
        android:id="@+id/llSalary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_toolbar">

        <include
            android:id="@+id/lHeader"
            layout="@layout/org_header" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/llMale"
        android:layout_marginTop="3dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/llFemale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llMale"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:visibility="gone">


        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="21dp"
            android:paddingLeft="10dp"
            android:src="@drawable/bandi" />

        <TextView
            android:id="@+id/tvCountry_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/ivFlag"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="24dp"
            android:text="@string/txt_female"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFemaleCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvCountry_name"
            android:layout_alignBottom="@+id/tvCountry_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:text="0"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/llFemale"
        android:layout_marginTop="3dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/llLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llFemale"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:visibility="gone">


        <ImageView
            android:id="@+id/ivFlag3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:paddingLeft="10dp"
            android:src="@drawable/arbi" />

        <TextView
            android:id="@+id/tvCountry_name3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivFlag3"
            android:layout_toRightOf="@+id/ivFlag3"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="24dp"
            android:text="@string/txt_UAE"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvLocalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvCountry_name3"
            android:layout_alignBottom="@+id/tvCountry_name3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"
            android:text="20"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/llLocal"
        android:layout_marginTop="3dp"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/llMale"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/llSalary"
        android:clickable="true"
        android:visibility="gone">


        <ImageView
            android:id="@+id/ivFlag2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:paddingLeft="10dp"
            android:src="@drawable/banda" />

        <TextView
            android:id="@+id/tvCountry_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/ivFlag2"
            android:layout_toRightOf="@+id/ivFlag2"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="24dp"
            android:text="@string/txt_male"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvMaleCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvCountry_name2"
            android:layout_alignBottom="@+id/tvCountry_name2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp"
            android:text="0"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvNoTextFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="No Employee(s) Found"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>
